--- a/videos/templates/video.html
+++ b/videos/templates/video.html
@@ -14,7 +14,7 @@
         
     
 
-    <div class="col-12" id="" style="background-color:white;padding:10px;margin-top:10px;">
+    <div class="col-12 shadow-div" id="" style="background-color:white;padding:10px;margin-top:10px;">
 
       <div class=" col-12" style="padding:0;"><h3>{{ video.titre }} </h3></div>
 
@@ -23,15 +23,18 @@
           <div class="col-12 col-sm-9" style="padding:0;">
            <div class="d-flex flex-row align-items-center">
             
-            <div class="d-flex align-items-center justify-content-center" style="width:50px;height:50px;background-color:#9b59b6;">
+           
+            <a href="/jtx/jtx/{{video|get_promo_video:""}}" class="d-flex align-items-center justify-content-center no-hover-link {% if video|get_promo_video:""|divisibleby:'2' %}bg-danger{%else%}bg-warning{% endif %}" style="width:50px;height:50px;"
+            data-toggle="tooltip" data-placement="bottom" title="Aller sur la page du JTX {{video|get_promo_video:""}}">
              
-                <div class="" style="font-size:30px;">
-                    15
+                <div class="no-hover-link" style="font-size:30px;color:white;">
+                    {{video|get_promo_video:"short"}}
                 </div>
               
-            </div>
-            
-            <div style="padding:5px;">
+              </a>
+           
+
+            <div style="padding:5px;margin-top:-6px;">
               {% autoescape off %}
               <div class="" style="">{{ video|auteurs}}</div>
               {% endautoescape %}
@@ -183,7 +186,7 @@
 
     
 
-    <div class="col-12" style="background-color:white;padding:10px;margin-top:10px;">
+    <div class="col-12 shadow-div" style="background-color:white;padding:10px;margin-top:10px;">
       <div class="titre_et_vues_date">Ajoutée le {{ video.date|date:"d/m/Y" }}.</div>
       {{ video.description }}
     </div>
@@ -193,7 +196,7 @@
     
 
 
-    <div class="col-12" style="background-color:white;padding:10px;margin-top:10px;" id="commentaires_video_id">
+    <div class="col-12 shadow-div" style="background-color:white;padding:10px;margin-top:10px;" id="commentaires_video_id">
       <div class="commentaires_video_titre">
         Commentaires
       </div>
@@ -230,7 +233,7 @@
        <div class="media-body">
       <div class="commentaire_nom_date">
         <div class="commentaires_nom">
-          {{ r.author.first_name }} {{ r.author.last_name }}
+          {{ r.author.first_name|lower }} {{ r.author.last_name|lower }}
         </div>
         <div class="commentaires_date">
           
@@ -241,7 +244,7 @@
           <div class="commentaires_jaime">
 
             <div class="petit_titre_et_vues_vues_et_jaime_nb_jaime" >
-              <span id="commentaire_{{r.id}}">{{r.like_comment_set.count}}</span> j'aime.
+              <span id="commentaire_{{r.id}}">{{r.like_comment_set.count}}</span> j'aime
             </div>
 
             <div style="display:inline-block;margin-left:-4px;">
@@ -254,7 +257,7 @@
                 </div>
               </a> -->
 
-               <button type="button" id="like_comment_btn_{{r.id}}" onclick="like_comment(0, '/jtx/unlike_comment/{{r.id}}')" class="btn btn-sm" style="background-color:white;margin-top:-5px;" data-toggle="tooltip" data-placement="top" title="Je n'aime plus.">
+               <button type="button" id="like_comment_btn_{{r.id}}" onclick="like_comment(0, '/jtx/unlike_comment/{{r.id}}')" class="btn btn-sm" style="background-color:white;margin-top:-5px;" >
                     <img src={% static "admin/img/opticons/thumbsdown.svg" %} alt="pin" style="height:15px;margin-top:0px;opacity:0.294;" >
               </button>
               {% else %}
@@ -265,7 +268,7 @@
                 </div>
               </a> -->
 
-              <button type="button" id="like_comment_btn_{{r.id}}" onclick="like_comment(1, '/jtx/like_comment/{{r.id}}')" class="btn btn-sm" style="background-color:white;margin-top:-5px;" data-toggle="tooltip" data-placement="top" title="J'aime.">
+              <button type="button" id="like_comment_btn_{{r.id}}" onclick="like_comment(1, '/jtx/like_comment/{{r.id}}')" class="btn btn-sm" style="background-color:white;margin-top:-5px;" >
                     <img src={% static "admin/img/opticons/thumbsup.svg" %} alt="pin" style="height:15px;margin-top:0px;opacity:0.294;" >
               </button>
 
@@ -299,8 +302,8 @@
   </div>
 
   <!-- suggestion -->
-  <div class="col-xs-12 col-sm-4 col-lg-4" style="padding:15px;padding-left:5px;" >
-    <div class="" style="background-color:white;margin:0;padding:20px;">
+  <div class="col-xs-12 col-sm-4 col-lg-4 " style="padding:15px;padding-left:5px;" >
+    <div class="shadow-div" style="background-color:white;margin:0;padding:20px;">
         <h4>À suivre</h4>
         
         <div class='row' style=" padding:0px;">
@@ -414,12 +417,10 @@ $(function () {
 
           a = `
         <span id='video_epingle_id_+{{video.id}}'>
-          <a class="lateral_bar_button_a" href="{% url 'video' video.id %}">
-            <div class="lateral_bar_button">
-              <div class="lateral_bar_button_text">
+          <a class="dropdown-item" href="{% url 'video' video.id %}">
+           
                   {{ video.titre }}
-              </div>
-            </div>
+             
         </a>
         </span>`;
 
