--- a/videos/templates/block_video_proj_liste.html
+++ b/videos/templates/block_video_proj_liste.html
@@ -11,7 +11,7 @@
 
     {% if horizontal %}
         <div class="row ">
-            <div class="col-md-4"  style="padding:2px;margin:0;">
+            <div class="col-lg-4"  style="padding:2px;margin:0;">
     {% endif %}  
 
     {% if video %}
@@ -32,7 +32,7 @@
     
     {% if horizontal %}
             </div>
-            <div class="col-md-8 " style="padding:0;padding-left:5px;margin-top:-3px;">
+            <div class="col-lg-8 " style="padding:0;padding-left:5px;margin-top:-3px;">
                 <div class="card-block">
     {% else %}
     <div class="card-body" style="padding:5px;">
