--- a/videos/templates/index.html
+++ b/videos/templates/index.html
@@ -23,7 +23,7 @@
 		<div class="card">
 	<h2 class="card-header">Vidéo du jour</h2>
 	<div class="card-body">
-	<video style="width:100%;" controls >
+	<video style="width:100%;max-width:600px;" controls >
 			<source src="http://binet-jtx.com/vdj/vdj.mp4">
 			Your browser does not support the video tag.
 		</video>
