--- a/videos/templates/proj.html
+++ b/videos/templates/proj.html
@@ -38,7 +38,7 @@
 
 	    <div id="proj_auteurs" class="titre_et_vues_auteurs">JTX 20{{ proj | short_promo }}</div>
 	    <div class="titre_et_vues_info">
-				{% if proj.category.titre.lower == 'proj jtx' %}
+				{% if proj.category.titre.lower == 'proj en .k' %}
 					<a href="{% url 'category' proj.category.id 1 %}" class="titre_et_vues_info_cat_proj">{{proj.category.titre}}</a>
 				{% elif proj.category.titre.lower == 'amphi binets' %}
 					<a href="{% url 'category' proj.category.id 1 %}" class="titre_et_vues_info_cat_amphi">{{proj.category.titre}}</a>
